# cpct

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
cli/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  basic_usage.cpp
libcompress/include/compress/: archive_reader.h  archive_writer.h  compress.h  types.h
libcompress/include/compress/detail/: compat.h
libcompress/src/: bzip2_archive.cpp  factory.cpp  format_detection.cpp  gzip_archive.cpp  multipart.cpp  rar_archive.cpp  sevenz_archive.cpp  tar_archive.cpp  xz_archive.cpp  zip_archive.cpp  zstd_archive.cpp
tests/: CMakeLists.txt  test_advanced.cpp  test_bzip2.cpp  test_format_detection.cpp  test_gzip.cpp  test_helpers.h  test_multipart.cpp  test_rar.cpp  test_sevenz.cpp  test_tar.cpp  test_types.cpp  test_xz.cpp  test_zip.cpp  test_zstd.cpp
tests/data/: large.txt  lorem.txt
